# CameraAiDetector

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/: AiFactory.h  CMakeLists.txt  Client.cpp  Client.h  CodeprojectAiFacade.cpp  CodeprojectAiFacade.h  Core.cpp  Core.h  ErrorReportState.h  ErrorReporter.cpp  ErrorReporter.h  ErrorState.h  FinalAction.h  FrameReader.cpp  FrameReader.h  Helpers.h  HybridObjectDetect.cpp  HybridObjectDetect.h  Log.cpp  Log.h  Logger.cpp  Logger.h  OpenCvAiFacade.cpp  OpenCvAiFacade.h  RingBuffer.h  SafePtr.h  Settings.cpp  Settings.h  SimpleMotionDetect.cpp  SimpleMotionDetect.h  StreamProperties.h  TelegramBot.cpp  TelegramBot.h  Translation.h  UidUtils.h  VideoWriter.cpp  VideoWriter.h  ai.h  ai_factory.h  codeproject_ai_facade.cpp  (+39 more)
src/client/: .clang-format  CMakeLists.txt  ai_factory.h  codeproject_ai_facade.h  core.cpp  core.h  error_reporter.cpp  error_reporter.h  ffmpeg_video_writer.h  hybrid_object_detect.h  main.cpp  mqtt_client.cpp  mqtt_client.h  opencv_ai_facade.h  opencv_video_writer.cpp  ring_buffer.h  settings.cpp  simple_motion_detect.cpp  simple_motion_detect.h  telegram_bot_facade.cpp  uid_utils.h  video_utils.h  video_writer.h
src/common/: helpers.h
src/server/: CMakeLists.txt  main.cpp  mqtt_callback_holder.cpp  mqtt_callback_holder.h  mqtt_client.cpp  mqtt_client.h  mqtt_messages.h  telegram_bot_facade.cpp  telegram_bot_facade.h  telegram_messages.h  telegram_messages_queue.h  telegram_messages_sender.cpp  telegram_messages_sender.h
